Fixed the width so it doesnt go out of bound

--- a/css/education.css
+++ b/css/education.css
@@ -11,6 +11,7 @@
     position:relative;
     top: 5%;
     left: 16%;
+    width: 80%;
 }
 
 #select-jubilee {
