--- a/css/experience.css
+++ b/css/experience.css
@@ -8,11 +8,12 @@
     color:limegreen;
     font-weight: bold;
     position: relative;
+    width: 70%;
     top: 20%;
     left: 16%;
     font-family: monospace;
     text-shadow: 0px 0px 10px limegreen;
-    padding-right: 50%;
+    padding-right: 10%;
 }
 
 @media screen and (max-width:768px) {
